kubernetes/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-ingress
  namespace: node-red
  labels:
    app: node-red
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: cert-manager-letsencrypt-production
spec:
  rules:
  - host: node-red.zephyrproject.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-red-service
            port:
              number: 1880
  tls:
  - hosts:
    - node-red.zephyrproject.io
    secretName: node-red-http-tls
